Big HLS update. Add start of adaptive support, but leave disabled for now.